@@ -89,3 +89,22 @@ jobs:
       run: cargo clippy --all-features -- -D warnings
     - name: Check no lint warnings (no default features)
       run: cargo clippy --no-default-features -- -D warnings
+
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-22.04
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+    - name: Setup Rust toolchain
+      uses: dtolnay/rust-toolchain@v1
+      with:
+        toolchain: nightly
+    - name: Cache build artifacts
+      uses: Swatinem/rust-cache@v2.6.0
+    - name: Run benchmarks
+      run: cargo bench
+    - name: Run benchmarks (all features)
+      run: cargo bench --all-features
+    - name: Run benchmarks (no default features)
+      run: cargo bench --no-default-features
