@@ -22,6 +22,17 @@ const TEST_DATA: &[u8] = include_bytes!("../tests/data/data.txt");
 #[bench]
 fn encrypt(b: &mut Bencher) {
     b.iter(|| {
-        Encryptor::with_params(TEST_DATA, PASSWORD, Params::new(10, 8, 1).unwrap()).encrypt_to_vec()
+        Encryptor::with_params(
+            TEST_DATA,
+            PASSWORD,
+            Params::new(
+                10,
+                Params::RECOMMENDED_R,
+                Params::RECOMMENDED_P,
+                Params::RECOMMENDED_LEN,
+            )
+            .unwrap(),
+        )
+        .encrypt_to_vec()
     });
 }
