@@ -20,7 +20,13 @@ fn success() {
     let cipher = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     );
     let mut buf = vec![u8::default(); cipher.out_len()];
     cipher.encrypt(&mut buf);
@@ -29,7 +35,13 @@ fn success() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(encrypted.len(), TEST_DATA.len() + 128);
@@ -41,7 +53,13 @@ fn invalid_output_length() {
     let cipher = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     );
     let mut buf = vec![u8::default(); cipher.out_len() - 1];
     cipher.encrypt(&mut buf);
@@ -52,7 +70,13 @@ fn magic_number() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(&encrypted[..6], b"scrypt");
@@ -63,7 +87,13 @@ fn version() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(encrypted[6], 0);
@@ -74,7 +104,13 @@ fn log_n() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(encrypted[7], 10);
@@ -85,7 +121,13 @@ fn r() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(&encrypted[8..12], u32::to_be_bytes(8));
@@ -96,7 +138,13 @@ fn p() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     assert_eq!(&encrypted[12..16], u32::to_be_bytes(1));
@@ -107,7 +155,13 @@ fn checksum() {
     let encrypted = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     )
     .encrypt_to_vec();
     let checksum = Sha256::digest(&encrypted[..48]);
@@ -119,7 +173,13 @@ fn out_len() {
     let cipher = Encryptor::with_params(
         TEST_DATA,
         PASSWORD,
-        Params::new(10, 8, 1, Params::RECOMMENDED_LEN).unwrap(),
+        Params::new(
+            10,
+            Params::RECOMMENDED_R,
+            Params::RECOMMENDED_P,
+            Params::RECOMMENDED_LEN,
+        )
+        .unwrap(),
     );
     assert_eq!(cipher.out_len(), 142);
 }
