@@ -16,6 +16,12 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 toc::[]
 
+== {compare-url}/v0.5.3\...HEAD[Unreleased]
+
+=== Fixed
+
+* Fix `benches/encrypt.rs` ({pull-request-url}/30[#30])
+
 == {compare-url}/v0.5.2\...v0.5.3[0.5.3] - 2023-08-06
 
 === Changed
